--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/images/TEN_LOGO.jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Linkedin Clone!</title>
+  <title>TEN Social Network</title>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
